flux/bastille/apps/kube-system/cilium/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.chancey.dev
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  addresses:
    - type: IPAddress
      value: 10.12.0.10
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.chancey.dev"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.chancey.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: chancey-dev-tls
    - name: https-bastille
      protocol: HTTPS
      port: 443
      hostname: "*.bastille.chancey.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: bastille-chancey-dev-tls
    - name: https-fkn
      protocol: HTTPS
      port: 443
      hostname: "*.fkn.chancey.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: fkn-chancey-dev-tls
    - name: tls-passthrough
      protocol: TLS
      port: 8443
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: tls-truenas
      protocol: TLS
      port: 443
      hostname: "truenas.chancey.dev"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpsredirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
