flux/bastille/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &hostname hubble.chancey.dev
spec:
  hostnames:
    - *hostname
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
